Make thank you great again

--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -4,9 +4,8 @@
   </head>
   <div class="test">
     <div class="overlay"></div>
-      <table class="text">
-        <tr><td>+447426949609</tr></td><br>
-        <tr><td>cristiano.balducci@gmail.com</tr></td><br>
-      </table>
+    <div class="text strong">
+      +447426949609 cristiano.balducci@gmail.com
+    </div>
   </div>
 </html>
