Add message field

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,10 @@
             <td><input type="text" name="Author"></td><br>
           </tr>
           <tr>
+            <td><label>Message</label></td>
+            <td><input type="text" name="Message"></td><br>
+          </tr>
+          <tr>
             <td><input type="submit"></td>
           </tr>
         </table>
