--- a/templates/index.html
+++ b/templates/index.html
@@ -31,5 +31,6 @@
         </table>
       </form>
     </div>
+    <div class="footer">get the source at <a href="">https://github.com/cbalducci/something.to-rea.de</a></div>
   </div>
 </html>
