--- a/static/css/pan.css
+++ b/static/css/pan.css
@@ -75,3 +75,24 @@ strong {
 html, body {
   height: 100%;
 }
+
+a:link{
+  color: gray;
+}
+
+a:visited{
+  color: black;
+}
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0.7;
+  padding: 1rem;
+  color: black;
+  font-family: Courier;
+  background-color: #efefef;
+  text-align: center;
+}
