--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -7,5 +7,6 @@
     <div class="text strong">
       +447426949609 cristiano.balducci@gmail.com
     </div>
+    <div class="footer">get the source at <a href="">https://github.com/cbalducci/something.to-rea.de</a></div>
   </div>
 </html>
