--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,9 @@
         </table>
       </form>
     </div>
-    <div class="footer">get the source at <a href="">https://github.com/cbalducci/something.to-rea.de</a></div>
+    <div class="footer">get the source on
+      <a href="https://github.com/cbalducci/something.to-rea.de">
+        github
+      </a></div>
   </div>
 </html>
