Make button a bit prettier

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             <td><textarea name="Message" form="suggestion" rows="5" maxlength="250"></textarea></td><br>
           </tr>
           <tr>
-            <td><input type="submit"></td>
+            <td padding-left="200px"><button class="btn btn--stripe" type="submit">submit</td>
           </tr>
         </table>
       </form>
