--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/pan.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
   </head>
-  <div class="test">
-    <div class="overlay"></div>
-    <div class="text strong">
-      +447426949609 cristiano.balducci@gmail.com
+  <div class="external">
+    <div class="internal">
+      <div class="row">+447426949609</div>
+      <div class="row">cristiano.balducci@gmail.com</div>
     </div>
     <div class="footer">get the source on
       <a href="https://github.com/cbalducci/something.to-rea.de">
