New style for the button

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,6 @@
   <div class="external">
     <div class="internal">
       <form method="post"
-            class="table"
             action="/thankyou"
             id="suggestion">
         <div class="row">
@@ -28,8 +27,10 @@
             <div class="col"><textarea name="Message" form="suggestion" rows="4"></textarea>
             </div>
         </div>
-        <button class="button" type="submit">Submit</a>
       </form>
+        <div class="button">
+          <button class="btn" type="submit" form="suggestion">Submit</a>
+        </div>
     </div>
     <div class="footer">get the source on
       <a href="https://github.com/cbalducci/something.to-rea.de">
