--- a/static/css/main.css
+++ b/static/css/main.css
@@ -88,9 +88,25 @@ html,body {
   align-content: center;
   align-items: center;
   justify-content: center;
-  background-color: #ccc;
-  border-radius: 3px;
-  padding-top: 10px;
+}
+
+.btn {
+  color: white;
+  background: black;
+  border: 2px solid #fff;
+  padding: 16px 32px;
+  text-align: center;
+  display: inline-block;
+  font-family: Courier;
+  font-size: 34px;
+  color: white;
+  font-weight: 100;
+  padding: 10px 40px;
+}
+
+.btn:hover {
+  color: black;
+  background: white;
 }
 
 a,
