--- a/static/css/main.css
+++ b/static/css/main.css
@@ -49,7 +49,7 @@ html,body {
   opacity: 0.8;
   position: absolute;
   z-index: 20;
-  font-family: Courier;
+  font-family: 'Cutive Mono';
   font-size: 34px;
   color: white;
   font-weight: 100;
@@ -97,7 +97,7 @@ html,body {
   padding: 16px 32px;
   text-align: center;
   display: inline-block;
-  font-family: Courier;
+  font-family: 'Cutive Mono';
   font-size: 34px;
   color: white;
   font-weight: 100;
