--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive+Mono">
 </head>
   <div class="external">
     <div class="internal">
@@ -23,7 +24,7 @@
           </div>
         </div>
         <div class="row">
-            <div class="col">Message:</div>
+            <div class="col">Note:</div>
             <div class="col"><textarea name="Message" form="suggestion" rows="4"></textarea>
             </div>
         </div>
