--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive+Mono">
   </head>
   <div class="external">
     <div class="internal">
