Fix sketchy column if too much text

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
           </div>
         </div>
         <div class="row">
-            <div class="col">Note:</div>
+            <div class="col">Message:</div>
             <div class="col"><textarea name="Message" form="suggestion" rows="4"></textarea>
             </div>
         </div>
