--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive+Mono">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
   <div class="external">
     <div class="internal">
