--- a/static/css/main.css
+++ b/static/css/main.css
@@ -48,6 +48,7 @@ html,body {
   background-color: black;
   opacity: 0.8;
   position: absolute;
+  max-height: 80%;
   z-index: 20;
   font-family: 'Cutive Mono';
   font-size: 34px;
@@ -69,6 +70,17 @@ html,body {
   flex: 50%;
   padding: 2px;
   min-width: 200px;
+}
+
+.head {
+  flex: 5%;
+}
+.listing {
+  font-size: 20px;
+  border: 0px;
+  border-bottom: 1px;
+  border-style: solid;
+  border-color: white;
 }
 
 .footer {
