Add wee explanation at the top

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
 </head>
   <div class="external">
     <div class="internal">
+      <div class="row what">
+        <div class="col">Send me a book suggestion</div>
+      </div>
       <form method="post"
             action="/thankyou"
             id="suggestion">
@@ -33,7 +36,7 @@
         <div class="button">
           <button class="btn" type="submit" form="suggestion">Submit</a>
         </div>
-    </div>
+  </div>
     <div class="footer">get the source on
       <a href="https://github.com/cbalducci/something.to-rea.de">
         github
